Fixed Button Spacing

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -46,18 +46,17 @@ html{
     text-align: center;
     color: rgb(252, 235, 1);
     font-family: Arial, Helvetica, sans-serif, "Times new Roman";
-    font-size: 65px;
-    padding-top: 2.5em;
+    font-size: 35px;
+    padding-top: 1em;
     text-shadow: 2px 2px 20px rgb(255, 102, 0);
 }
 
 .homebuttons{
     text-align: center;
-    flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
-    text-align: center;
-    min-width: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .btn{
@@ -71,6 +70,7 @@ html{
     transition: ease-out 0.3s;
     font-size: 2rem;
     outline: none;
+    margin-top: 10px;
 }
 
 .btn:hover {
